--- a/clean.ipynb
+++ b/clean.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 239,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 240,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 241,
    "outputs": [],
    "source": [
     "# VCL\n",
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 242,
    "outputs": [],
    "source": [
-    "# testelapse\n",
-    "testelapse = df['testelapse']\n",
-    "min_qr = testelapse.quantile(0.01)\n",
-    "max_qr = testelapse.quantile(0.99)\n",
-    "df = df[testelapse.between(min_qr, max_qr)]"
+    "# testelapse + surveyelapse\n",
+    "elapse = df['testelapse'] + df['surveyelapse']\n",
+    "min_qr = elapse.quantile(0.01)\n",
+    "max_qr = elapse.quantile(0.99)\n",
+    "df = df[elapse.between(min_qr, max_qr)]"
    ],
    "metadata": {
     "collapsed": false,
@@ -84,14 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 243,
    "outputs": [],
    "source": [
-    "# surveyelapse\n",
-    "surveyelapse = df['surveyelapse']\n",
-    "min_qr = surveyelapse.quantile(0.01)\n",
-    "max_qr = surveyelapse.quantile(0.99)\n",
-    "df = df[surveyelapse.between(min_qr, max_qr)]"
+    "# age\n",
+    "df = df[df['age'].between(13, 80)]\n",
+    "\n",
+    "# family size\n",
+    "df = df[df['familysize'] < 15]\n",
+    "\n",
+    "# eliminate minors that voted or are/have been married\n",
+    "minor = df['age'] < 18\n",
+    "voted = df['voted'] == 1\n",
+    "married = df['married'] > 1\n",
+    "df = df[~(minor & (voted | married))]"
    ],
    "metadata": {
     "collapsed": false,
@@ -111,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 244,
    "outputs": [],
    "source": [
     "# Extraversion\n",
@@ -152,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 245,
    "outputs": [],
    "source": [
     "# Calculate and create columns for depression, anxiety, and stress scores\n",
@@ -182,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 246,
    "outputs": [],
    "source": [
     "drop = lambda regex: df.drop(df.filter(regex=regex).columns, axis=1, inplace=True)\n",
@@ -221,10 +227,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 247,
    "outputs": [],
    "source": [
     "df.to_csv(\"data/cleaned.csv\", index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1928     13\n5127     13\n2999     13\n35041    13\n15101    13\n         ..\n10179    79\n2203     79\n4221     80\n12981    80\n2217     80\nName: age, Length: 25106, dtype: int64"
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['age'].sort_values()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "      country  source  education  urban  gender  engnat  age  screensize  \\\n0          IN       2          2      3       2       2   16           1   \n1          US       2          2      3       2       1   16           2   \n3          US       2          1      3       2       1   13           2   \n4          MY       2          3      2       2       2   19           2   \n5          US       2          2      3       2       2   20           2   \n...       ...     ...        ...    ...     ...     ...  ...         ...   \n39768      US       0          4      1       2       1   27           2   \n39769      US       2          1      2       2       1   16           2   \n39770      GB       2          2      2       1       1   16           2   \n39773      US       2          3      2       2       1   20           2   \n39774      MY       1          3      3       2       2   26           1   \n\n       uniquenetworklocation  hand  ...  EST1  EST2  OPE1  OPE2  \\\n0                          1     1  ...     1     1     7     7   \n1                          1     2  ...     1     1     5     3   \n3                          1     2  ...     4     6     6     7   \n4                          2     3  ...     2     3     5     5   \n5                          1     1  ...     7     6     7     1   \n...                      ...   ...  ...   ...   ...   ...   ...   \n39768                      1     1  ...     1     5     6     5   \n39769                      1     1  ...     3     5     6     1   \n39770                      1     1  ...     3     3     6     2   \n39773                      1     1  ...     1     3     3     4   \n39774                      1     1  ...     3     1     6     6   \n\n       depression_score  depression_level anxiety_score  anxiety_level  \\\n0                    27                 4            34              4   \n1                    24                 3            17              3   \n3                    16                 2            17              3   \n4                    32                 4            40              4   \n5                    13                 2             6              0   \n...                 ...               ...           ...            ...   \n39768                 6                 0             2              0   \n39769                15                 2            21              4   \n39770                36                 4            12              2   \n39773                16                 2            13              2   \n39774                27                 4            10              2   \n\n       stress_score  stress_level  \n0                40             4  \n1                27             3  \n3                16             1  \n4                29             3  \n5                12             0  \n...             ...           ...  \n39768            14             1  \n39769            30             3  \n39770            15             1  \n39773            33             4  \n39774            16             1  \n\n[25106 rows x 33 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>source</th>\n      <th>education</th>\n      <th>urban</th>\n      <th>gender</th>\n      <th>engnat</th>\n      <th>age</th>\n      <th>screensize</th>\n      <th>uniquenetworklocation</th>\n      <th>hand</th>\n      <th>...</th>\n      <th>EST1</th>\n      <th>EST2</th>\n      <th>OPE1</th>\n      <th>OPE2</th>\n      <th>depression_score</th>\n      <th>depression_level</th>\n      <th>anxiety_score</th>\n      <th>anxiety_level</th>\n      <th>stress_score</th>\n      <th>stress_level</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>IN</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>1</td>\n      <td>7</td>\n      <td>7</td>\n      <td>27</td>\n      <td>4</td>\n      <td>34</td>\n      <td>4</td>\n      <td>40</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>US</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>16</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>...</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>3</td>\n      <td>24</td>\n      <td>3</td>\n      <td>17</td>\n      <td>3</td>\n      <td>27</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>US</td>\n      <td>2</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>13</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>...</td>\n      <td>4</td>\n      <td>6</td>\n      <td>6</td>\n      <td>7</td>\n      <td>16</td>\n      <td>2</td>\n      <td>17</td>\n      <td>3</td>\n      <td>16</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>MY</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>19</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>...</td>\n      <td>2</td>\n      <td>3</td>\n      <td>5</td>\n      <td>5</td>\n      <td>32</td>\n      <td>4</td>\n      <td>40</td>\n      <td>4</td>\n      <td>29</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>US</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>20</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>7</td>\n      <td>6</td>\n      <td>7</td>\n      <td>1</td>\n      <td>13</td>\n      <td>2</td>\n      <td>6</td>\n      <td>0</td>\n      <td>12</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>39768</th>\n      <td>US</td>\n      <td>0</td>\n      <td>4</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>27</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>5</td>\n      <td>6</td>\n      <td>5</td>\n      <td>6</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>14</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>39769</th>\n      <td>US</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>16</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>3</td>\n      <td>5</td>\n      <td>6</td>\n      <td>1</td>\n      <td>15</td>\n      <td>2</td>\n      <td>21</td>\n      <td>4</td>\n      <td>30</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>39770</th>\n      <td>GB</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>16</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>3</td>\n      <td>3</td>\n      <td>6</td>\n      <td>2</td>\n      <td>36</td>\n      <td>4</td>\n      <td>12</td>\n      <td>2</td>\n      <td>15</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>39773</th>\n      <td>US</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>20</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>1</td>\n      <td>3</td>\n      <td>3</td>\n      <td>4</td>\n      <td>16</td>\n      <td>2</td>\n      <td>13</td>\n      <td>2</td>\n      <td>33</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>39774</th>\n      <td>MY</td>\n      <td>1</td>\n      <td>3</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>26</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>3</td>\n      <td>1</td>\n      <td>6</td>\n      <td>6</td>\n      <td>27</td>\n      <td>4</td>\n      <td>10</td>\n      <td>2</td>\n      <td>16</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>25106 rows × 33 columns</p>\n</div>"
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ],
    "metadata": {
     "collapsed": false,
